--- a/client/css/main.css
+++ b/client/css/main.css
@@ -10,6 +10,7 @@
   --card-button-hover-color: orange;
   --card-button-bg-color: #7B7676;
   --card-button-bg-hover-color: blue;
+  --bg-color: #D9D9D9;
   --black: #000000;
   --gray: #7B7676;
   --white: #ffffff;
@@ -150,7 +151,7 @@ svg * {
   }
 }
 body {
-  background-color: rgb(213, 255, 220);
+  background-color: var(--bg-color);
   font-family: "Inter", sans-serif;
 }
 
@@ -268,12 +269,13 @@ body {
 }
 
 .header {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 50px;
 }
 .header__container {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid var(--black);
+  padding-bottom: 50px;
 }
 .header__nav {
   flex-grow: 1;
@@ -307,6 +309,26 @@ body {
 .catalog {
   padding-top: 100px;
   padding-bottom: 100px;
+  background-color: var(--white);
+}
+.catalog__wrapper {
+  background-color: var(--gray);
+}
+.catalog__row {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.catalog__button {
+  font-size: 1.25rem;
+  border: none;
+  border-radius: 30px;
+  height: 89px;
+  font-weight: 700;
+  padding-inline: 53px;
+  background-color: var(--card-bg-color);
+  cursor: pointer;
 }
 .catalog__title {
   font-size: 2.8125rem;
