--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -18,6 +18,7 @@
   //-------------------------------------
 
   //all
+  --bg-color: #D9D9D9;
   --black: #000000;
   --gray: #7B7676;
   --white: #ffffff;
