--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -1,10 +1,11 @@
 .header {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 50px;
 
     &__container {
         display: flex;
         align-items: center;
+        border-bottom: 1px solid var(--black);
+        padding-bottom: 50px;
     }
 
     &__nav {
