--- a/client/scss/components/_card.scss
+++ b/client/scss/components/_card.scss
@@ -65,5 +65,11 @@
         padding-inline: 27px;
         color: var(--card-button-color);
         background-color: var(--card-button-bg-color);
+        transition: color .3s ease, background-color .3s ease;
+
+        &:hover {
+            color: var(--card-button-color-hover);
+            background-color: var(--card-button-bg-color-hover);
+        }
     }
 }
