--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -2,3 +2,7 @@ body {
     background-color: var(--body-bg);
     font-family: 'Inter', sans-serif;
 }
+
+body.no-scroll {
+    overflow: hidden;
+}
