--- a/client/scss/components/_logo.scss
+++ b/client/scss/components/_logo.scss
@@ -1,10 +1,15 @@
 .logo {
+    display: flex;
+    height: 100%;
+
     &__link {
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
 }
+
 
 .logo svg path {
     fill: var(--logo-color);
