--- a/client/scss/layout/_footer.scss
+++ b/client/scss/layout/_footer.scss
@@ -1,22 +1,37 @@
 .footer {
     background-color: var(--footer-bg);
     padding-top: 50px;
-    padding-bottom: 50px;
     color: var(--white);
+    font-size: 1.25rem; //20px
+
+    @media only screen and (max-width: 1024px) {
+        font-size: 1rem; //16px
+    }
+
+    @media only screen and (max-width: 768px) {
+        padding-top: 25px;
+        font-size: .875rem; //14px
+    }
 
     &__grid {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
+        display: flex;
+        justify-content: space-between;
         margin-bottom: 50px;
         gap: 60px;
+
+        @media only screen and (max-width: 768px) {
+            gap: 30px;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 30px;
+        }
     }
 
     &__contacts-list {
         display: flex;
         flex-direction: column;
         gap: 20px;
-        grid-column: 8/12;
-        justify-self: end;
     }
 
     &__contacts-link {
@@ -24,23 +39,45 @@
         align-items: center;
         gap: 10px;
         text-decoration: none;
-        font-size: 1.25rem; //20px
         color: inherit;
+        transition: color .3s ease;
+
+        &:hover {
+            color: var(--link-color-hover);
+        }
     }
 
     &__social-list {
         justify-self: end;
         display: flex;
         gap: 15px;
-        grid-column: 12/12;
+    }
+
+    &__social-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        transition: color .3s ease;
+
+        &:hover {
+            color: var(--link-color-hover);
+        }
     }
 
     &__copyright {
-        color: var(--white);
         text-align: center;
+        border-top: 1px solid var(--yellow);
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 }
 
 .footer .nav__link {
     color: var(--white);
+    transition: color .3s ease;
+
+    &:hover {
+        color: var(--link-color-hover);
+    }
 }
