--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -1,32 +1,82 @@
 .header {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    display: flex;
+    // background-color: var(--header-bg);
+    min-height: var(--header-height);
     position: sticky;
     top: 0;
     z-index: 3;
+    transition: transform .3s ease-in-out;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(244, 192, 117, 0.5);
     // background-color: var(--header-bg-color);
 
     &__container {
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: 1024px) {
+            justify-content: space-between;
+        }
+    }
+
+    &__mobile-button {
+        display: none;
+        position: relative;
+        z-index: 3;
+        padding: 10px;
+
+        @media only screen and (max-width: 1024px) {
+            display: block;
+        }
     }
 
     &__nav {
+        height: 100%;
         flex-grow: 1;
         margin-right: 20px;
+
+        @media only screen and (max-width: 1024px) {
+            position: absolute;
+            right: 0;
+            left: 0;
+            top: -100vh;
+            height: 100vh;
+            background-color: var(--orange);
+            width: 100%;
+            transition: transform .3s ease;
+            z-index: 2;
+        }
     }
 
     &__nav-list {
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: flex-end;
         gap: 40px;
+
+        @media only screen and (max-width: 1024px) {
+            justify-content: center;
+            flex-direction: column;
+            gap: 0;
+        }
+    }
+
+    &__nav-item {
+        height: 100%;
+
+        @media only screen and (max-width: 1024px) {
+            height: 50px;
+            width: 100%;
+        }
     }
 
     &__nav-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
         font-size: 1.25rem;
         text-decoration: none;
         color: var(--header-link-color);
@@ -35,6 +85,18 @@
         /*20px*/
         &:hover {
             color: var(--header-link-hover-color);
+        }
+
+        &--orange {
+            color: var(--orange);
+
+            &:hover {
+                color: #ff6127;
+            }
+        }
+
+        @media only screen and (max-width: 1024px) {
+            color: var(--white);
         }
     }
 
@@ -63,4 +125,8 @@
     &__button:hover svg path {
         fill: var(--header-bg-cart-button-hover);
     }
+}
+
+.header.open .header__nav {
+    transform: translateY(calc(100%));
 }
