--- a/client/scss/utilities/_fonts.scss
+++ b/client/scss/utilities/_fonts.scss
@@ -30,3 +30,11 @@
     src: url('../fonts/roboto-v47-cyrillic_latin-regular.woff2') format('woff2');
     /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+@font-face {
+    font-family: 'Yeseva One';
+    src: url('../fonts/YesevaOne-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
