--- a/client/scss/layout/_hero.scss
+++ b/client/scss/layout/_hero.scss
@@ -50,16 +50,16 @@
         }
     }
 
-    &__overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        backdrop-filter: blur(3px);
-        background: rgba(255, 255, 255, 0.1);
-        z-index: -1;
-    }
+    // &__overlay {
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     right: 0;
+    //     bottom: 0;
+    //     backdrop-filter: blur(3px);
+    //     background: rgba(255, 255, 255, 0.1);
+    //     z-index: -1;
+    // }
 
     &__title {
         font-family: 'Yeseva One', sans-serif;
