--- a/client/scss/layout/_catalog.scss
+++ b/client/scss/layout/_catalog.scss
@@ -15,6 +15,19 @@
         padding-inline: 12px;
         gap: 24px;
         overflow: scroll;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: none;
+        /* для Internet Explorer и Edge */
+        scrollbar-width: none;
+
+        /* для Firefox */
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        &::-ms-scrollbar {
+            display: none;
+        }
     }
 
     // &__tabs-list::before {
@@ -33,15 +46,15 @@
     &__tabs-button {
         display: flex;
         align-items: center;
+        justify-content: center;
         font-weight: 700;
-        gap: 24px;
         height: 60px;
         background-color: var(--catalog-bg-button);
         color: var(--catalog-button-color);
         text-decoration: none;
         text-transform: uppercase;
         transition: color .3s ease, background-color .3s ease;
-        gap: 24px;
+        gap: 10px;
         border-radius: 30px;
         padding-inline: 15px;
 
