--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1150,12 +1150,27 @@ body.no-scroll {
   display: none;
   position: relative;
   z-index: 3;
-  padding: 10px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background: transparent;
 }
 @media only screen and (max-width: 1024px) {
   .header__mobile-button {
     display: block;
   }
+}
+.header__mobile-button span {
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: black;
+}
+.header__mobile-button span:nth-child(1) {
+  transform: translateY(-15px);
+}
+.header__mobile-button span:nth-child(3) {
+  transform: translateY(15px);
 }
 .header__nav {
   height: 100%;
@@ -1220,6 +1235,7 @@ body.no-scroll {
 }
 @media only screen and (max-width: 1024px) {
   .header__nav-link {
+    font-size: 2.125rem;
     color: var(--white);
   }
 }
@@ -1235,8 +1251,8 @@ body.no-scroll {
   background: none;
   padding: 0;
   cursor: pointer;
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
 }
 .header__button svg path {
   fill: var(--header-bg-cart-button);
@@ -1323,20 +1339,23 @@ body.no-scroll {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: -100px;
   padding-top: 150px;
   padding-bottom: 50px;
-  margin-top: -100px;
   background-color: var(--hero-bg);
   color: #000000;
   /* calc(100vh - var(--header-height)) */
 }
 .hero__content {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 30px;
-  padding: 50px 50px 43px 50px;
+  justify-content: center;
   height: 100%;
+  padding: 50px 50px 43px 50px;
+  border-radius: 30px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1344,13 +1363,11 @@ body.no-scroll {
   font-size: 1.25rem;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
-  position: relative;
-  z-index: 2;
 }
 @media only screen and (max-width: 1024px) {
   .hero__content {
-    font-size: 1rem;
     padding: 30px 30px 30px 30px;
+    font-size: 1rem;
   }
 }
 @media only screen and (max-width: 600px) {
@@ -1368,9 +1385,9 @@ body.no-scroll {
   background-image: url("../images/hero/slider/slider-bg-3.webp");
 }
 .hero__title {
-  font-family: "Yeseva One", sans-serif;
   max-width: 500px;
   font-size: 4rem;
+  font-family: "Yeseva One", sans-serif;
   line-height: 1.5;
 }
 @media only screen and (max-width: 1024px) {
@@ -1400,9 +1417,6 @@ body.no-scroll {
   text-decoration: none;
   transition: background-color 0.3s ease;
 }
-.hero__button:hover {
-  background-color: var(--hero-button-bg-hover);
-}
 @media only screen and (max-width: 1024px) {
   .hero__button {
     height: 80px;
@@ -1414,6 +1428,9 @@ body.no-scroll {
     height: 60px;
     padding-inline: 25px;
   }
+}
+.hero__button:hover {
+  background-color: var(--hero-button-bg-hover);
 }
 
 .swiper {
