--- a/client/scss/layout/_hero.scss
+++ b/client/scss/layout/_hero.scss
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -100px;
     padding-top: 150px;
     padding-bottom: 50px;
-    margin-top: -100px;
     background-color: var(--hero-bg);
     color: #000000;
 
@@ -12,24 +12,25 @@
 
 
     &__content {
+        position: relative;
+        z-index: 2;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         gap: 30px;
-        padding: 50px 50px 43px 50px;
+        justify-content: center;
         height: 100%;
+        padding: 50px 50px 43px 50px;
+        border-radius: 30px;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
         color: var(--hero-color);
         font-size: 1.25rem; //20px
         backdrop-filter: blur(10px);
-        position: relative;
-        z-index: 2;
 
         @media only screen and (max-width: 1024px) {
-            font-size: 1rem; //16px
             padding: 30px 30px 30px 30px;
+            font-size: 1rem; //16px
         }
 
         @media only screen and (max-width: 600px) {
@@ -61,9 +62,9 @@
     // }
 
     &__title {
-        font-family: 'Yeseva One', sans-serif;
         max-width: 500px;
         font-size: 4rem; //64px
+        font-family: 'Yeseva One', sans-serif;
         line-height: 1.5;
 
         @media only screen and (max-width: 1024px) {
@@ -93,10 +94,6 @@
         text-decoration: none;
         transition: background-color .3s ease;
 
-        &:hover {
-            background-color: var(--hero-button-bg-hover);
-        }
-
         @media only screen and (max-width: 1024px) {
             height: 80px;
         }
@@ -105,6 +102,10 @@
             align-self: auto;
             height: 60px;
             padding-inline: 25px;
+        }
+
+        &:hover {
+            background-color: var(--hero-button-bg-hover);
         }
     }
 }
