--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -28,24 +28,27 @@
         height: 40px;
         border: none;
         background: transparent;
+        padding: 0;
 
         @media only screen and (max-width: 1024px) {
             display: block;
         }
 
         & span {
+            position: absolute;
             display: block;
-            height: 2px;
-            width: 100%;
+            height: 3px;
+            width: 40px;
             background-color: black;
+            transition: transform .3s ease;
         }
 
         & span:nth-child(1) {
-            transform: translateY(-15px);
+            transform: translateY(-10px);
         }
 
         & span:nth-child(3) {
-            transform: translateY(15px);
+            transform: translateY(10px);
         }
     }
 
@@ -147,5 +150,18 @@
 }
 
 .header.open .header__nav {
-    transform: translateY(calc(100%));
+    transform: translateY(100%);
+}
+
+.header.open .header__mobile-button span:nth-child(1) {
+    transform: translateY(0) rotate(45deg);
+
+}
+
+.header.open .header__mobile-button span:nth-child(2) {
+    opacity: 0;
+}
+
+.header.open .header__mobile-button span:nth-child(3) {
+    transform: translateY(0) rotate(-45deg);
 }
