--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -37,8 +37,8 @@
   --catalog-bg-tabs: #ECF0F1;
   --catalog-bg-button: #FF7F50;
   --catalog-bg-button-hover: #f4c075;
-  --catalog-button-color: #ECF0F1;
-  --catalog-button-color-hover: #ECF0F1;
+  --catalog-button-color: #ffffff;
+  --catalog-button-color-hover: #ffffff;
   //------------------------------------
   // card
   --card-bg-color: #ECF0F1;
