--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -1,4 +1,6 @@
 body {
+    display: flex;
+    flex-direction: column;
     background-color: var(--body-bg);
     font-family: 'Inter', sans-serif;
 }
