--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1465,11 +1465,23 @@ body.no-scroll {
   height: 100px;
   padding-inline: 35px;
   border-radius: 30px;
-  background-color: var(--hero-button-bg);
-  color: inherit;
   font-weight: 700;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  background-color: var(--hero-button-bg);
+  color: var(--hero-button-color);
+  transition: all 0.3s ease;
+}
+@media (hover: hover) {
+  .hero__button:hover:not(:disabled) {
+    background-color: var(--hero-button-bg-hover);
+    color: var(--hero-button-color-hover);
+  }
+}
+@media (hover: none) {
+  .hero__button:active:not(:disabled) {
+    background-color: var(--hero-button-bg-hover);
+    color: var(--hero-button-color-hover);
+  }
 }
 @media only screen and (max-width: 1024px) {
   .hero__button {
