align center counter

--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -159,6 +159,8 @@
         font-size: .875rem;
         position: absolute;
         background-color: var(--orange);
+        text-align: center;
+        color: var(--black);
     }
 }
 
