add modal window

--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -9,6 +9,11 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+/*Блокируем скролл, если много контента*/
+.scroll-lock {
+    overflow: hidden;
+}
+
 body.no-scroll {
     overflow: hidden;
 }
